cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8.txt
../dataset/june2020_dataset_copy/urlddedf61e88_dwendelen_CG2_1_tgz-pJ8-RendProjectJ8/src/ImagePack/RGBEFormat.java:28: error: (required.method.not.called) $$ 4 $$ method close $$ new FileOutputStream(filename) $$ java.io.FileOutputStream $$ possible exceptional exit due to writeHeader(os) with exception type java.io.IOException $$ ( 690, 720 ) $$ @MustCall method close may not have been invoked on new FileOutputStream(filename) or any of its aliases.
    OutputStream os = new BufferedOutputStream(new FileOutputStream(filename), 8192);
                                               ^
  The type of object is: java.io.FileOutputStream.
  Reason for going out of scope: possible exceptional exit due to writeHeader(os) with exception type java.io.IOException
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
